# terminal_progress

./: README.md  pack.sh
languages/c/: meson.build
languages/c/include/: meson.build  terminal_progress.h
languages/c/src/: example.c  meson.build  terminal_progress.c
languages/zig/: README.md  build.zig  build.zig.zon
languages/zig/src/: example.zig  terminal_progress.zig  tests.zig  tty.zig  utils.zig
